# directx-present-hook

./: CMakeLists.txt  LICENSE  README.md  example-prepare-x32.cmd  example-prepare-x64.cmd
src/: base-window.cpp  base-window.h  black-box-dx-window.h  d3d11-base-helper.cpp  d3d11-base-helper.h  d3d11-present-hook.cpp  d3d11-present-hook.h  d3d11-renderer.cpp  d3d11-renderer.h  d3d12-base-helper.cpp  d3d12-base-helper.h  d3d12-present-hook.cpp  d3d12-present-hook.h  d3d12-renderer.cpp  d3d12-renderer.h  main.cpp  misc-helpers.cpp  misc-helpers.h  pixel-shader.hlsl  vertex-shader.hlsl
